--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,6 @@
                         <span class="btn-icon">+</span>
                         New Work Item
                     </button>
-                    <button class="btn btn-secondary" id="schedulerToggle">
-                        <span class="scheduler-icon">⏸️</span>
-                        <span class="scheduler-text">Stop</span>
-                    </button>
                     <button class="btn btn-ghost" id="viewLogsBtn">
                         <span class="btn-icon">📋</span>
                         Logs
@@ -257,6 +253,7 @@
                                 <option value="developer">Developer</option>
                                 <option value="architect">Architect</option>
                                 <option value="tester">Tester</option>
+                                <option value="reviewer">Reviewer</option>
                             </select>
                         </div>
                     </div>
